--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
     <ul id="lis">
         <li>Java</li>
 	<li>Python</li>
-        <li>Oracle</li>
-        <li>MySQL</li>
+        <li>SQL</li>
+        <li>Web Development</li>
+	<li>Azure</li>   
         
     </ul>
 </div>
